--- a/vignettes/c060.bib
+++ b/vignettes/c060.bib
@@ -274,3 +274,30 @@
   pages={101--148}
 }
 
+@article{Bioconductor,
+    author = {Robert C Gentleman and Vincent J. Carey and Douglas M. Bates and {others}},
+    title = {Bioconductor: Open software development for computational biology and bioinformatics},
+    journal = {Genome Biology},
+    volume = {5},
+    year = {2004},
+    pages = {R80},
+    url = {http://genomebiology.com/2004/5/10/R80},
+  }
+
+@Manual{glmnet,
+  title  = {\pkg{glmnet}: Lasso and elastic-net regularized generalized linear models},
+  author = {Jerome Friedman and Trevor Hastie and Rob Tibshirani},
+  year   = {2013},
+  note   = {\proglang{R}~package version~1.8-5},
+  url    = {http://CRAN.R-project.org/package=glmnet},
+}
+
+@Manual{peperr,
+  title  = {\pkg{peperr}: Parallelised Estimation of Prediction Error},
+  author = {Christine Porzelius and Harald Binder},
+  year   = {2011},
+  note   = {\proglang{R}~package version~1.1-6},
+  url    = {http://CRAN.R-project.org/package=peperr},
+}
+
+
